--- a/views/backup2.pug
+++ b/views/backup2.pug
@@ -96,5 +96,24 @@ html
         each val, index in data_output
           li= index + ': ' + val
     h3= data_output2
+
+    [
+                    ['!{data_output[0][0]}', !{data_output[0][1]}],
+                    ['HUMAN RESOURCES', 16.1],
+                    ['DEPARTMENT OF PUBLIC WORKS', 14.2],
+                    ['DEPARTMENT OF FINANCE', 14.0],
+                    ['CULTURAL SERVICES', 12.5],
+                    ['MARIN COUNTY PARKS', 12.1],
+                    ['MARIN COUNTY FIRE', 11.8],
+                    ['MARIN COUNTY FREE LIBRARY', 11.7],
+                    ['PROBATION', 11.1],
+                    ['AGRICULTURE WEIGHTS MEASURES', 11.1] 
   
+
+[
+  ['!{data_output[0][0]}', !{data_output[0][1]}],
+  ['!{data_output[1][0]}', !{data_output[1][1]}],
+  ['!{data_output[2][0]}', !{data_output[2][1]}]
+                    
+]
       
