--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
         script(src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
-        script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js")
+        script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js")
         script(src = "https://code.highcharts.com/highcharts.js")
     body
         div#container(style="width: 950px; height: 400px; margin: auto")
