--- a/views/index.pug
+++ b/views/index.pug
@@ -8,32 +8,7 @@ html
         script(src = "https://code.highcharts.com/highcharts.js")
     body
         div#container(style="width: 950px; height: 400px; margin: auto")
-        form(action='/', method='POST', id='formId')
-          label(for="startDate") Date:
-          input(id='date', name='month', readonly='true')
-          input(type='submit', value='Submit')
-
-        script(type="text/javascript").
-           $("#date").datepicker({
-              dateFormat: "mm/yy",
-              changeMonth: true,
-              changeYear: true,
-              minDate: new Date(2016, 5, 1),
-              maxDate: new Date(2017, 7, 1),
-              showButtonPanel: true,
-              onClose : function(dateText, inst){
-                function isDonePressed(){
-                  return ($('#ui-datepicker-div').html().indexOf('ui-datepicker-close ui-state-default ui-priority-primary ui-corner-all ui-state-hover') > -1);
-                }
-
-                if (isDonePressed()){
-                    var month = $("#ui-datepicker-div .ui-datepicker-month :selected").val();
-                    var year = $("#ui-datepicker-div .ui-datepicker-year :selected").val();
-                    $(this).datepicker('setDate', new Date(year, month, 10)).trigger('change');    
-                }
-              }
-          });
-        
+        include dataPicker.pug
         script.
           $(document).ready(function() {
             var chart = {
